# vSegmap

./: CMakeLists.txt  CMakeLists.txt.bk  CMakeLists.txt.user.3.2-pre1  package.xml
include/segmapper/: segmapper.hpp  v_slam_worker.h
launch/: segmapper.launch
launch/kitti/: visual_localization.launch  visual_loop_closure.launch  visual_loop_closure.yaml
src/: VSegMapper.cpp  VSegMapper.h  segmapper.cpp  segmapper_node.cpp  vSegmap_node.cpp  v_slam_worker.cpp
